--- a/app/templates/claim.html
+++ b/app/templates/claim.html
@@ -60,7 +60,7 @@
 							<li><label for="insurance-no"><input type="radio" name="insurance" id="insurance-no" ng-model="claim.insurance">No</label></li>
 						</ul>
 						<button class="small button back" ng-click="nextStep(2)"><i class="entypo-left-open-big"></i>BACK</button>
-						<button class="small button next" ng-click="submitClaim()">NEXT<i class="entypo-right-open-big"></i></button>
+						<button class="small button next" ng-click="submitClaim()">SUBMIT<i class="entypo-check"></i></button>
 					</div>
 				</form>
 			</div>
