--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,19 +1,20 @@
 <section class="login-form">
 	<div class="row">
-		<div class="large-5 medium-8 small-12 medium-centered columns">
+		<div class="large-4 medium-6 small-12 medium-centered columns">
 			<div class="form-panel">
 				<div data-alert class="alert-box warning radius" ng-if="authenticationError">
 					<div class="text-center">
 						<div>The username or password you entered was incorrect...</div>
 					</div>
 				</div>
+				<h5>Sign in to your account</h5>
+				<hr>
 				<form>
 					<label>Email</label>
 					<input type="email" name="email" ng-model="auth.email" required>
 					<label>Password</label>
 					<input type="password" name="password" ng-model="auth.password" required>
-					<button type="submit" class="button expand" ng-click="authenticate(auth)">Login</button>
-					<hr>
+					<button type="submit" class="small button expand" ng-click="authenticate(auth)">Login <i class="entypo-login"></i></button>
 					<div class="clearfix">
 						<a href="" class="right"><small>Forgot Your Password?</small></a>
 					</div>
